build: update doc (use schemas, remove security for auth routes)
